<resources>
	<string name="app_name">Runner</string>
	<string name="title_actions">Actions</string>
	<string name="title_transactions">Transactions</string>
	<string name="title_settings">Settings</string>
	<string name="title_actions_in_filter">Choose actions</string>

	<string name="title_filter">Filter Actions</string>
	<string name="title_filter_trans">Filter transactions</string>
	<string name="reset">Reset</string>
	<string name="search">Search</string>
	<string name="search_hint">Search for actionID, name or root code</string>
	<string name="search_hint_transaction">Search transaction id, or session text</string>
	<string name="date_range">Date range</string>
	<string name="countries">Countries</string>
	<string name="countries_hint">Select countries</string>
	<string name="network">Networks</string>
	<string name="network_hint">Select network operators</string>
	<string name="status">Status</string>
	<string name="no_transaction">No transaction</string>
	<string name="categories">Categories</string>
	<string name="categories_hint">Select categories</string>
	<string name="parsers_checkbox">Only show actions with parsers</string>
	<string name="sim_checkbox">Only show actions with SIM present</string>
	<string name="somethingWentWrong">Something went wrong, please try again</string>
	<string name="url_forgot_password">https://www.usehover.com/u/password/new</string>

	<string name="simon_content_desc">Hover_background</string>
	<string name="login_image_transition">image_transition</string>
	<string name="login_image_transition_2">image_transition2</string>
	<string name="action_trans_icon">action_trans_icon</string>
	<string name="custom_font_error">Cannot set custom font</string>
	<string name="custom_font_err_msg">At least one default font must be set</string>
	<string name="email_string">Email</string>
	<string name="email_hint">e.g. email@ilovehover.com</string>
	<string name="package_hint">e.g. com.hover.internal</string>
	<string name="api_key_hint">e.g. 1234567890ABCDEFGHIJKLMNOPQSTUVXYZ</string>
	<string name="password">Password</string>
	<string name="password_hint">Enter your password</string>
	<string name="signIn">Sign in</string>
	<string name="forgot_password">Forgot password</string>
	<string name="loadingText">Loading…</string>
	<string name="loggin_in_text">Logging in, please wait…</string>
	<string name="package_name_err">Unable to get package name, please check app settings.</string>
	<string name="sign_in_err">Unable to sign in, please check your email and password.</string>
	<string name="sign_in_success">Signed in successfully</string>
	<string name="one_or_more_empty_variable">This action has one or more empty variables. Please check.</string>
	<string name="filter_text">Filter</string>
	<string name="testAllActions">Test all actions</string>
	<string name="test_single_action">Test action</string>
	<string name="testing_mode">Testing mode</string>
	<string name="normal">Normal</string>
	<string name="normal_toolTip">USSD sessions run in the background</string>
	<string name="Debug">Debug</string>
	<string name="debug_toolTip">Watch USSD sessions as they happen</string>
	<string name="no_sim">No SIM</string>
	<string name="delay_hint">Set ms delay between sessions</string>
	<string name="no_sim_toolTip">When you do not have the correct SIM for the service you want to test</string>
	<string name="sim_cards">SIM cards</string>
	<string name="action_icon_status_description">Action status after it was ran</string>
	<string name="sim_tooltip">Don’t see the correct SIM? Try removing it and re-inserting it. If that doesn\’t work, contact support.</string>
	<string name="contact_support">Contact support</string>
	<string name="refresh">Refresh</string>
	<string name="profile">Profile</string>
	<string name="signout">Sign out</string>
	<string name="sim1">SIM 1</string>
	<string name="sim2">SIM 2</string>
	<string name="refresh_app_data">Refresh app data</string>
	<string name="no_sim_found">No sim detected</string>
	<string name="app_data_refreshed">App would be refreshed in background</string>

	<string name="pendingStatus_title">This action has a pending transaction.</string>
	<string name="pendingStatus_desc">This transaction has no parsers or has failed to match an existing parser.</string>
	<string name="pendingStatus_linkText">Learn more about pending transactions</string>
	<string name="pendingStatus_url">https://docs.usehover.com/parsing</string>
	<string name="pending_transaction">Pending Transaction</string>
	<string name="failed_transaction">Failed Transaction</string>

	<string name="failedStatus_title">This action has a failed transaction.</string>
	<string name="failedStatus_desc">This action has matched a parser with a failed transaction status.</string>
	<string name="failedStatus_linkText">Learn more about failed transactions</string>
	<string name="failedStatus_url">https://docs.usehover.com/parsing</string>

	<string name="successStatus_title">This action works.</string>
	<string name="unrunStatus_title">This action is yet to be run on this device.</string>

	<string name="transaction_det_failed">This transaction failed</string>
	<string name="transaction_det_pending">This transaction is pending</string>
	<string name="transaction_det_success">This transaction worked</string>
	<string name="sim_filter">SIM</string>
	
	<string name="operators">Operators</string>
	<string name="longcode">Longcode</string>
	<string name="parsers">Parsers</string>
	<string name="success_label">Success</string>
	<string name="pending_label">Pending</string>
	<string name="failed_label">Failed</string>
	<string name="not_yet_run">Not yet run</string>
	
	<string name="testing_variables">Testing variables</string>
	<string name="testing_variables_desc">We submit these values whenever you test this action.</string>
	<string name="device">Device</string>
	<string name="debug_info">Debug info</string>
	<string name="messages">Messages</string>

	<string name="recent_transactions">Recent transactions</string>
	<string name="view_all">View all</string>
	<string name="zero_transactions">No transactions yet</string>
	
	<string name="parser_type">Type</string>
	<string name="parser_action">Action</string>
	<string name="parser_actionID">ActionID</string>
	<string name="parser_category">Category</string>
	<string name="parser_status">Status</string>
	<string name="parser_created">Created</string>
	<string name="parser_sender">Sender</string>
	<string name="parser_regex">Regex</string>
	
	<string name="transac_details_status">Status</string>
	<string name="transac_details_action">Action</string>
	<string name="transac_details_actionId">ActionID</string>
	<string name="transac_details_time">Time</string>
	<string name="transac_details_transId">Transaction ID</string>
	<string name="transac_details_result">Result</string>
	<string name="tranac_details_category">Category</string>
	<string name="transac_details_operator">Operator</string>
	<string name="from_account_creation_to_today"><![CDATA[From <account creation> to <today>]]></string>
	<string name="contactUs"><![CDATA[Don’t see the correct SIM?<br/> Try removing it and re-inserting it. If that doesn\’t work, <a href="mailto:support@usehover.com">contact support.</a>]]></string>
	<string name="hint_choose_actions">Choose actions</string>
	<string name="selected_range">Selected range</string>

	<string name="noRunnableAction">No runnable actions. Try refreshing</string>
	<string name="validatingActions">Validating all actions, please wait…</string>
	<string name="refreshed_successfully">Refreshed successfully</string>

	<string name="no_transactions_yet">No transactions yet</string>
	<string name="no_transactions_desc">Test an action to see transactions appear here</string>
	<string name="no_actions_yet">No Actions yet</string>
	<string name="no_actions_desc">Try swiping down to refresh</string>
	
	<string name="uncompleted_variable_notice">Please enter values for the variables below.</string>
	<string name="above_skip_text">Don’t have the values for these variables right now?</string>
	<string name="skip_text">Skip this action for now.</string>
	<string name="below_skip_text">You can always add the values later on this action’s details page</string>
	<string name="bad_steps_config">Something went wrong with your steps. Please check your dashboard settings</string>
	
	<string name="title_countries">Choose countries</string>
	<string name="title_categories">Choose categories</string>
	<string name="title_networks">Choose networks</string>
	<string name="save_text">Save</string>

	<string name="reset_successful">Reset successful</string>
	<string name="no_actions_filter_result">0 Actions</string>
	<string name="no_transactions_filter_result">0 Transactions</string>
	<string name="next_label">Next</string>

	<string name="api_url">https://www.usehover.com/api/</string>
	<string name="hsdk_base_url" translatable="false">https://www.usehover.com/sdk/</string>
	<string name="auth_endpoint">authenticate</string>
	<string name="token_endpoint">get_token</string>

	<string name="INVALID_EMAIL">Invalid email format, please enter correct email and try again</string>
	<string name="INVALID_PASSWORD">Invalid password format. Ensure password has a minimum of 5 letters with no space</string>
	<string name="NO_NETWORK">Internet connection not found</string>
	<string name="transaction_coming_up">Transaction coming right up…</string>
	<string name="uncompleted_variable_unfilled">Please fill in empty variable</string>
</resources>
