<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/colorPrimaryDark"
		android:padding="@dimen/activity_vertical_margin"
		android:orientation="vertical"
		tools:context=".ui.settings.SettingsFragment">

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical">

		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textAlignment="textStart"
				android:textStyle="bold"
				android:textSize="@dimen/actionTextSize"
				android:textColor="@color/colorHoverWhite"
				android:text="@string/title_settings"
				/>

		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textAlignment="textStart"
				android:textStyle="bold"
				android:textSize="@dimen/text_16"
				android:textColor="@color/colorHoverWhite"
				android:text="@string/testing_mode"
				android:layout_marginTop="32dp"
				android:layout_marginBottom="@dimen/activity_vertical_margin"
				/>

		<RadioGroup
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/myRadioGroup"
				>

			<androidx.appcompat.widget.AppCompatRadioButton
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:id="@+id/mode_normal"
					android:checked="true"
					app:buttonTint="@color/colorPrimary"
					android:paddingStart="12dp"
					android:paddingEnd="0dp"
					android:textSize="@dimen/text_16"
					android:textColor="@color/colorSecondaryGrey"
					android:text="@string/normal" />
			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="44dp"
					android:textSize="@dimen/text_16"
					android:textColor="@color/colorMainGrey"
					android:layout_marginBottom="@dimen/activity_vertical_margin"
					android:text="@string/normal_toolTip"/>

			<androidx.appcompat.widget.AppCompatRadioButton
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:id="@+id/mode_debug"
					android:textSize="@dimen/text_16"
					android:paddingStart="12dp"
					android:paddingEnd="0dp"
					app:buttonTint="@color/colorPrimary"
					android:textColor="@color/colorSecondaryGrey"
					android:text="@string/Debug" />

			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="44dp"
					android:textSize="@dimen/text_16"
					android:textColor="@color/colorMainGrey"
					android:layout_marginBottom="@dimen/activity_vertical_margin"
					android:text="@string/debug_toolTip"/>

			<androidx.appcompat.widget.AppCompatRadioButton
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textSize="@dimen/text_16"
					android:textColor="@color/colorSecondaryGrey"
					android:id="@+id/mode_noSim"
					android:paddingStart="12dp"
					android:paddingEnd="0dp"
					app:buttonTint="@color/colorPrimary"
					android:text="@string/no_sim" />

			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="44dp"
					android:textSize="@dimen/text_16"
					android:textColor="@color/colorMainGrey"
					android:layout_marginBottom="@dimen/activity_vertical_margin"
					android:text="@string/no_sim_toolTip"/>

		</RadioGroup>

		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textAlignment="textStart"
				android:textStyle="bold"
				android:textSize="@dimen/text_16"
				android:textColor="@color/colorHoverWhite"
				android:text="@string/sim_cards"
				android:layout_marginTop="32dp"
				android:layout_marginBottom="@dimen/activity_vertical_margin"
				/>

		<LinearLayout
				android:layout_width="match_parent"
				android:background="@color/colorPrimaryDark"
				android:paddingTop="8dp"
				android:layout_marginHorizontal="25dp"
				android:orientation="horizontal"
				android:layout_height="wrap_content">

			<TextView
					android:layout_width="105dp"
					android:layout_height="wrap_content"
					android:textColor="@color/colorPrimary"
					android:textSize="@dimen/text_14"
					android:text="@string/sim1"/>

			<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:textColor="@color/colorSecondaryGrey"
					android:textSize="@dimen/text_14"
					android:id="@+id/sim1_content" />

		</LinearLayout>

		<LinearLayout
				android:layout_width="match_parent"
				android:background="@color/colorPrimaryDark"
				android:paddingTop="8dp"
				android:layout_marginHorizontal="25dp"
				android:orientation="horizontal"
				android:layout_height="wrap_content">

			<TextView
					android:layout_width="105dp"
					android:layout_height="wrap_content"
					android:textColor="@color/colorPrimary"
					android:textSize="@dimen/text_14"
					android:text="@string/sim2"/>

			<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:textColor="@color/colorSecondaryGrey"
					android:textSize="@dimen/text_14"
					android:id="@+id/sim2_content" />
		</LinearLayout>

		<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/activity_vertical_margin"
				android:textColor="@color/colorSecondaryGrey"
				android:layout_marginEnd="32dp"
				android:textSize="@dimen/text_14"
				android:id="@+id/contact_support"
				android:text="@string/contactUs"/>



		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="32dp"
				android:textSize="@dimen/text_16"
				android:textStyle="bold"
				android:text="@string/refresh"
				android:textColor="@color/colorHoverWhite"
				android:layout_marginBottom="@dimen/activity_vertical_margin"
				/>

		<Button
				android:layout_width="wrap_content"
				android:gravity="center"
				android:layout_gravity="start"
				android:background="@drawable/primary_button_bg"
				android:text="@string/refresh_app_data"
				android:textSize="@dimen/text_14"
				android:textStyle="bold"
				android:textAllCaps="false"
				android:paddingHorizontal="14dp"
				android:id="@+id/refreshButton"
				android:layout_height="38dp"/>

	</LinearLayout>
</androidx.core.widget.NestedScrollView>