<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/login_frame"
    android:layout_height="match_parent">
	<ImageView
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:src="@drawable/simon"
	    android:id="@+id/hover_bg1"
	    android:transitionName="@string/login_image_transition"
	    android:contentDescription="@string/simon_content_desc"
	    android:scaleType="centerCrop"/>
	<ImageView
			android:contentDescription="@string/simon_content_desc"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/hoverlogo_svg"
			android:layout_centerInParent="true"
			android:transitionName="@string/login_image_transition_2"
			android:id="@+id/iv1"
			/>
	<ProgressBar
			android:layout_width="200dp"
			android:layout_height="wrap_content"
			android:id="@+id/login_progress"
			android:visibility="visible"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="16dp"
			android:layout_marginEnd="32dp"
			android:layout_marginStart="32dp"
			android:layout_below="@id/iv1"
			style="@style/Widget.AppCompat.ProgressBar.Horizontal"
			/>
</RelativeLayout>